# cmake_builder

./: CMakeLists.txt  CMake_Builder.pro  CMake_Builder_2.0.pro  README.md  cmake_build.cpp  cmake_build.h  global.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  project_config.h  project_guide.cpp  project_guide.h  project_guide.ui  set.cpp  set.h  set.ui
src/: CMakeLists.txt
src/src2/: CMakeLists.txt
