project(CMake_Builder)
aux_source_directory(/root/CMake_Builder SRC_DIR)
set(INCLUDE_DIR ${SRC_DIR})
include_directories(${INCLUDE_DIR})
add_library(CMake_Builder SHARED ${SRC_DIR})
set(LIB_DIR /root/CMake_Builder/src)
link_directories(${LIB_DIR})
target_link_libraries(CMake_Builder src)
add_subdirectory(/root/CMake_Builder/src)
