project(src)
aux_source_directory(/root/CMake_Builder/src SRC_DIR)
set(INCLUDE_DIR ${SRC_DIR})
include_directories(${INCLUDE_DIR})
add_library(src SHARED ${SRC_DIR})
set(LIB_DIR /root/CMake_Builder/src/src2)
link_directories(${LIB_DIR})
target_link_libraries(src src2)
add_subdirectory(/root/CMake_Builder/src/src2)
